--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "vue-resource": "^1.0.3"
   },
   "dependencies": {
+    "@websanova/vue-auth": "^2.2.0-beta",
     "font-awesome": "^4.7.0",
+    "google-maps": "^3.2.1",
+    "select2": "^4.0.3",
     "tether": "^1.3.8",
     "vue-router": "^2.1.0",
-    "vuestrap": "^1.0.3"
+    "vue2-timepicker": "^0.1.4",
+    "vuejs-datepicker": "^0.4.27"
   }
 }
