--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "4.0.0-alpha.5",
     "bootstrap-sass": "^3.3.7",
     "element-ui": "^1.0.7",
     "gulp": "^3.9.1",
@@ -17,7 +17,8 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.1.0",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vue-star-rating": "^1.0.6"
   },
   "dependencies": {
     "@websanova/vue-auth": "^2.2.0-beta",
@@ -25,10 +26,12 @@
     "flatpickr": "^2.2.4",
     "font-awesome": "^4.7.0",
     "google-maps": "^3.2.1",
-    "jquery-confirm": "^3.0.1",
+    "jquery-confirm": "^3.0.3",
+    "sass-loader": "^4.1.1",
     "select2": "^4.0.3",
     "tether": "^1.3.8",
     "vue-bulma-message": "^1.1.0",
+    "vue-bulma-rating": "^1.0.0",
     "vue-router": "^2.1.0",
     "vue-template-compiler": "^2.1.7",
     "vue2-timepicker": "^0.1.4",
